fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/VPS_Console__c.object-meta.xml
<CustomObject>
    <description>Vascular Positioning Systems</description>
    <label>VPS Console</label>
    <nameField>
        <label>Serial #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VPS Consoles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>