fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VPS Contract Renewels</relationshipLabel>
    <relationshipName>VPS_Consoles</relationshipName>
    <type>Lookup</type>
</CustomField>