fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Approved_Rep__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reps approved for Demo units.</description>
    <label>Approved Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Request_Demo_Unit__c.Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </filterItems>
        <filterItems>
            <field>Request_Demo_Unit__c.Agree__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Request_Demo_Unit__c</referenceTo>
    <relationshipLabel>VPS Consoles</relationshipLabel>
    <relationshipName>VPS_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>