fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Carts__c.field-meta.xml
<CustomField>
    <fullName>Carts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carts?</label>
    <type>Checkbox</type>
</CustomField>