fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired?</label>
    <type>Checkbox</type>
</CustomField>