fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Lease_Contract__c.field-meta.xml
<CustomField>
    <fullName>Lease_Contract__c</fullName>
    <label>Lease Contract #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>