fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>VPS part numbers.</description>
    <label>Part Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VPS-G4C-R -G4 Refurbished</fullName>
            </value>
            <value>
                <fullName>RHY-100-MTRB – VPS Rhythm</fullName>
            </value>
            <value>
                <fullName>RHY-100-MTRB-R - VPS Rhythm Refurbished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>