fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VPS Consoles</relationshipLabel>
    <relationshipName>VPS_Consoles</relationshipName>
    <type>Lookup</type>
</CustomField>