fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/SAP__c.field-meta.xml
<CustomField>
    <fullName>SAP__c</fullName>
    <formula>Account__r.SAP_Sold_To__c</formula>
    <label>SAP#</label>
    <type>Text</type>
</CustomField>