fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/SN_VPS__c.field-meta.xml
<CustomField>
    <fullName>SN_VPS__c</fullName>
    <label>SN VPS</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>