fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <description>Check if a machine is In-Use or being repaired.</description>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>With Rep</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>