fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who owns the VPS machine.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VPS_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>