fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/fields/User_Owner__c.field-meta.xml
<CustomField>
    <fullName>User_Owner__c</fullName>
    <description>Formula Field to get Name of VPS Console Owner as the owner field defaults to creator</description>
    <formula>Approved_Rep__r.User__r.FirstName + &quot; &quot; + Approved_Rep__r.User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field to get Name of VPS Console Owner</inlineHelpText>
    <label>User Owner</label>
    <type>Text</type>
</CustomField>