fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/recordTypes/Deactivated_Unit.recordType-meta.xml
<RecordType>
    <fullName>Deactivated_Unit</fullName>
    <active>true</active>
    <description>Record Type changes fields to read only for deactivated units.</description>
    <label>Deactivated Unit</label>
</RecordType>