fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/recordTypes/VPS_Contracts.recordType-meta.xml
<RecordType>
    <fullName>VPS_Contracts</fullName>
    <active>true</active>
    <label>VPS Contracts</label>
</RecordType>