fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/validationRules/Force_Format_on_Serial_Number_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Force_Format_on_Serial_Number_field</fullName>
    <active>false</active>
    <description>Ensure the proper serial number format is used.

NOT( REGEX(  Name , &quot;[G]{1}[B]{1}[4]{1}[0-9]{4}&quot;))
NOT( REGEX(  Name , &quot;[N]{1}[0]{1}[0-9]{3}&quot;))</description>
    <errorConditionFormula>AND( NOT( REGEX(  Name , &quot;[G]{1}[B]{1}[4]{1}[0-9]{4}&quot;)) , NOT( REGEX(  Name , &quot;[N]{1}[0]{1}[0-9]{3}&quot;)) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Serial number must be in format &quot;GB4xxxx or N0xxx&quot; (xxxx is 4 digit number).</errorMessage>
</ValidationRule>