fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/validationRules/Select_Unit_Status_if_Rep_assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Unit_Status_if_Rep_assigned</fullName>
    <active>false</active>
    <description>Force user to provide a status for the unit if a rep is assigned</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Approved_Rep__c)) ,  ISPICKVAL(Unit_Status__c, &quot;&quot;)  )</errorConditionFormula>
    <errorDisplayField>Unit_Status__c</errorDisplayField>
    <errorMessage>Please select a Unit Status if a Rep is assigned.</errorMessage>
</ValidationRule>