fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/listViews/Search.listView-meta.xml
<ListView>
    <fullName>Search</fullName>
    <columns>Approved_Rep__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Owner__c</field>
        <operation>contains</operation>
        <value>Approved_Rep__r.Name</value>
    </filters>
    <label>Search</label>
    <language>en_US</language>
</ListView>