fullSandbox11072023/force-app/main/default/objects/VPS_Console__c/listViews/VPS_Contract.listView-meta.xml
<ListView>
    <fullName>VPS_Contract</fullName>
    <columns>Expired__c</columns>
    <columns>Active__c</columns>
    <columns>SAP__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>RSM_Email__c</columns>
    <columns>Product__c</columns>
    <columns>Lease_Contract__c</columns>
    <columns>Loaner_Start_Date__c</columns>
    <columns>Loaner_Expiration_Date__c</columns>
    <columns>Days_to_Expire__c</columns>
    <columns>Total_of_Units__c</columns>
    <columns>Carts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VPS_Console__c.VPS_Contracts</value>
    </filters>
    <label>VPS Contract</label>
    <language>en_US</language>
</ListView>